Rename to ElaoMceMediaBundle and remove unused code

--- a/Resources/views/Default/login.html.twig
+++ b/Resources/views/Default/login.html.twig
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Symfony2 ImageManger login</title>
+        <title>Symfony2 MediaManager login</title>
     </head>
     <body onload="document.forms[0].submit();">
         <form action="{{ url }}" method="post">
